# world-countries

./: .gitignore  .npmignore  CHANGELOG.md  Gemfile  README.md  Rakefile  composer.json  jest.config.js  package.json  pyproject.toml  pytest.ini  run_tests.sh  tsconfig.json  world_countries.gemspec
.github/workflows/: release-all.yml  release-npm.yml  release-packagist.yml  release-pypi.yml  release-rubygems.yml  test.yml.disabled
data/: world-countries.json
src/php/: WorldCountries.php
src/python/world_countries/: __init__.py  countries.py
src/ruby/: world_countries.rb
src/typescript/: index.ts
tests/php/: WorldCountriesTest.php
tests/python/: test_world_countries.py
tests/ruby/: spec_helper.rb  test_world_countries.rb  world_countries_spec.rb
tests/typescript/: WorldCountries.test.ts
