[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-countries"
version = "1.0.0"
description = "Comprehensive world countries data including names, codes, capitals, currencies, languages, and more"
readme = "README.md"
authors = [
    { name = "DevMe", email = "contact@devme.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Localization"
]
keywords = ["countries", "world", "country-codes", "iso-3166", "capitals", "currencies", "languages", "phone-codes", "country-data", "json"]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/devmehq/world-countries"
Repository = "https://github.com/devmehq/world-countries"
Issues = "https://github.com/devmehq/world-countries/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["world_countries*"]

[tool.setuptools.package-data]
world_countries = ["../../data/*.json"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true